# pi_R2

./: .gitignore
MediaManagerDemo/: build.gradle  gradle.properties
MediaManagerDemo/app/: build.gradle  google-services.json
MediaManagerDemo/app/jni/: Android.mk  Application.mk  dji_video_jni.c
MediaManagerDemo/app/src/main/: AndroidManifest.xml
MediaManagerDemo/app/src/main/assets/samples/: samples.json
MediaManagerDemo/app/src/main/assets/samples/around/assets/: tracker.wtc
MediaManagerDemo/app/src/main/assets/samples/around/assets/models/: 123.wt3
MediaManagerDemo/app/src/main/assets/samples/around/js/: around.js
MediaManagerDemo/app/src/main/assets/samples/introduction_video/: index.html
MediaManagerDemo/app/src/main/assets/samples/introduction_video/assets/: warehouse.wtc
MediaManagerDemo/app/src/main/assets/samples/introduction_video/js/: playbackstates.js
MediaManagerDemo/app/src/main/assets/samples/photo2/: index.html
MediaManagerDemo/app/src/main/assets/samples/photo2/assets/: 5heart.wt3
MediaManagerDemo/app/src/main/assets/samples/photo2/js/: around.js
MediaManagerDemo/app/src/main/assets/samples/takephoto/: index.html
MediaManagerDemo/app/src/main/assets/samples/takephoto/assets/: park.wto  phototarget.wtc  runtrain.wt3
MediaManagerDemo/app/src/main/assets/samples/takephoto/js/: takephoto.js
MediaManagerDemo/app/src/main/java/com/dji/mediaManagerDemo/: ConnectionActivity.java  DefaultLayoutActivity.java  DemoApplication.java  LoginActivity.java  MainActivity.java  MapsActivity.java  RecordHelpFunction.java  SignIn.java  SignUp.java  SliderAdaptator.java  Splash.java  Teach.java  VideoDecodingApplication.java  WikitudeArActivity.java  WikitudeGeoArActivity.java  WikitudeMainActivity.java
MediaManagerDemo/app/src/main/res/drawable/: ic_arrow_back24dp.xml  ic_keyboard_arrow_left_24dp.xml  ic_keyboard_arrow_right_24dp.xml  ic_signal_wifi_off_24dp.xml  ic_wifi_24dp.xml
MediaManagerDemo/app/src/main/res/layout/: activity_connection.xml  activity_default_layout.xml  activity_login.xml  activity_main.xml  activity_sign_in.xml  activity_sign_up.xml  activity_splash.xml  activity_teach2.xml  activity_videostream.xml  activity_wikitude_ar.xml  activity_wikitudemain.xml  media_info_item.xml  prompt_input_position.xml  slide_layout.xml
MediaManagerDemo/app/src/main/res/values/: colors.xml  google_maps_api.xml  strings.xml  styles.xml  wikitude_license_key.xml
MediaManagerDemo/gradle/wrapper/: gradle-wrapper.properties
MediaManagerDemo/plugins/: build.gradle
MediaManagerDemo/plugins/src/main/cpp/: CMakeLists.txt
MediaManagerDemo/plugins/src/main/cpp/src/: JniRegistration.cpp
MediaManagerDemo/plugins/src/main/cpp/src/barcode/: BarcodePlugin.cpp  BarcodePlugin.h
MediaManagerDemo/plugins/src/main/cpp/src/custom_camera/: YUVFrameInputPlugin.cpp  YUVFrameInputPlugin.h
MediaManagerDemo/plugins/src/main/cpp/src/face_detection/: FaceDetectionPlugin.cpp  FaceDetectionPlugin.h  FaceDetectionPluginConnector.cpp
MediaManagerDemo/plugins/src/main/cpp/src/marker_tracking/: MarkerTrackingPlugin.cpp  MarkerTrackingPlugin.h
MediaManagerDemo/plugins/src/main/cpp/src/simple_input_plugin/: SimpleInputPlugin.cpp  SimpleInputPlugin.h
(+32 files in other folders)
